Fix OpenSearch source pagination to handle failures correctly
Pagination previously terminated whenever a page returned fewer
documents than the configured batch_size, which silently dropped the
rest of an index whenever a request hit partial shard failures or a
transient error. The correct termination signal is used instead:
nextSearchAfter == null / empty page for search_after and PIT workers,
and an empty page for the scroll worker.

Shard failures are now captured in a bounded map of normalized reason
-> count (capped at 20 distinct keys with an "__other__" overflow
bucket), persisted on OpenSearchIndexProgressState, surfaced as new
counters (searchShardsFailed, searchRequestsFailed,
indicesCompletedWithFailures), and logged per page plus once at index
completion.

The scroll worker no longer aborts an index on a single per-request
exception; it tolerates up to MAX_CONSECUTIVE_SCROLL_FAILURES retries
before giving up the partition.

Signed-off-by: Keyur-S-Patel <keyurpatel.opensource@gmail.com>

Fixes opensearch-project/data-prepper#6337